--- a/css/punstyle.css
+++ b/css/punstyle.css
@@ -15,10 +15,25 @@
     width: 40%;
     border:3px;
     padding-top: 10px;
-    
+}
+
+.center_description{
+    position:relative;
+    margin: auto;
+    clear:both;
+    width: 60%;
+    border:3px;
+    padding-top: 5px;
+    padding-bottom: 20px;
 }
 
 #about{
     display:block;
     text-align: center;
+}
+
+.egg{
+    color:azure;
+    text-align: center;
+    font-size: 100px;
 }
