--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/slate.css" type="text/css" rel="stylesheet">
-        <link href="css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="subtitle">About the Punderdome</h1>
@@ -13,5 +13,4 @@
             <p class="center_description">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
             <a href="index.html" type = "submit" class="btn btn-default">Take me back!</a>
         </center>
-        
     </body>
