--- a/templates/eastereggcorn.html
+++ b/templates/eastereggcorn.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link href="css/slate.css" type="text/css" rel="stylesheet">
-        <link href="css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
     </head>
     <body background="eggs.jpg">
         <h1 class="egg">YOU'VE FOUND THE EASTER EGGCORN</h1>
