--- a/templates/outpun.html
+++ b/templates/outpun.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/slate.css" type="text/css" rel="stylesheet">
-        <link href="css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="subtitle">Puntential puns:</h1>
