trying out animations
added animate.css

--- a/punderdome/punfinder/templates/index.html
+++ b/punderdome/punfinder/templates/index.html
@@ -3,10 +3,11 @@
 <head>
     <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
     <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
+    <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1 class="title">WELCOME TO THE</h1>
-        <h1 class="title">PUNDERDOME</h1>
+        <h1 class="title fadeInDown">WELCOME TO THE</h1>
+        <h1 class="title fadeInUp">PUNDERDOME</h1>
         <center>
             <form method="post" class="center" role="search">
                 <div class="form-group">
