--- a/punderdome/punfinder/templates/eastereggcorn.html
+++ b/punderdome/punfinder/templates/eastereggcorn.html
@@ -2,11 +2,12 @@
     <head>
         <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
         <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body background="eggs.jpg">
-        <h1 class="egg">YOU'VE FOUND THE EASTER EGGCORN</h1>
+        <h1 class="egg animated tada">YOU'VE FOUND THE EASTER EGGCORN</h1>
         <center>
-            <form method="post" class="center" role="search">
+            <form method="post" class="center animated fadeInUp delay" role="search">
                 <form method="post" class="center" role="search">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Egg me!" id="egg_me" name="egg_me">
