--- a/punderdome/punfinder/templates/index.html
+++ b/punderdome/punfinder/templates/index.html
@@ -6,16 +6,16 @@
     <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1 class="title fadeInDown">WELCOME TO THE</h1>
-        <h1 class="title fadeInUp">PUNDERDOME</h1>
+        <h1 class="title animated fadeInDown">WELCOME TO THE</h1>
+        <h1 class="title animated fadeInUp">PUNDERDOME</h1>
         <center>
-            <form method="post" class="center" role="search">
+            <form method="post" class="center animated fadeInUp delay" role="search">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me">
                 </div>
                 <input type="submit" value="Punch me!" class="btn btn-default" >
             </form>
-            <a href="about.html" class="center" id="about" >About Punderdome</a>
+            <a href="about.html" class="center animated fadeIn longdelay" id="about" >About Punderdome</a>
         </center>
         
     </body>
