--- a/punderdome/punfinder/templates/about.html
+++ b/punderdome/punfinder/templates/about.html
@@ -3,14 +3,15 @@
     <head>
         <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
         <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1 class="subtitle">About the Punderdome</h1>
+        <h1 class="subtitle animated fadeInDown">About the Punderdome</h1>
         <center>
             <!-- insert info here-->
             
-            <p class="center_description">Fan of wordplay? Who isn't!</p>
-            <p class="center_description">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
-            <a href="index.html" type = "submit" class="btn btn-default">Take me back!</a>
+            <p class="center_description animated fadeInUp">Fan of wordplay? Who isn't!</p>
+            <p class="center_description animated fadeInUp">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
+            <a href="index.html" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
         </center>
     </body>
