--- a/punderdome/punfinder/templates/outpun.html
+++ b/punderdome/punfinder/templates/outpun.html
@@ -3,13 +3,14 @@
     <head>
         <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
         <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1 class="subtitle">Puntential puns:</h1>
+        <h1 class="subtitle animated fadeInDown">Puntential puns:</h1>
         <!--this is where you put the results-->
         
         <center>
-        <form method="post" class="center" role="search">
+        <form method="post" class="center animated fadeInUp delay" role="search">
                 <p>Want to try another word?</p>
             <form method="post" class="center" role="search">
                 <div class="form-group">
