--- a/punderdome/punfinder/templates/index.html
+++ b/punderdome/punfinder/templates/index.html
@@ -11,6 +11,8 @@
         <center>
             <form method="post" class="center" role="search">
                 <div class="form-group">
+					{% csrt_token %}
+					{{ form }}
                     <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me">
                 </div>
                 <input type="submit" value="Punch me!" class="btn btn-default" >
