I was told to delete this
if we need it back we can pull it back

--- a/punstyle.css
+++ b/punstyle.css
@@ -38,6 +38,11 @@
     font-size: 100px;
 }
 
+.egglets{
+    color:azure;
+    text-align: center;
+}
+
 .delay{
     -webkit-animation-delay: 1.5s;
     animation-delay: 1.5s;
