fixed the references
references have been fixed

--- a/template/aboutegg.html
+++ b/template/aboutegg.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="slate.css" type="text/css" rel="stylesheet">
-        <link href="punstyle.css" type="text/css" rel="stylesheet">
-        <link href="animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body background="eggs.jpg">
         <h1 class="subtitle egglets animated fadeInDown">About Eggcorns</h1>
@@ -12,6 +12,6 @@
             
             <p class="center_description animated fadeInUp egglets">Like eggs? Like corn? Well...this has nothing to do with either of those things, so sorry.</p>
             <p class="center_description animated fadeInUp egglets">Eggcorns are words or phrases that result from mishearing or misinterpreting other words and phrases. This includes things like substitution of one element for one that sounds very similar.</p>
-            <a href="index.html" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
+            <a href="eastereggcorn.html" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
         </center>
     </body>
