--- a/template/index.html
+++ b/template/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <link href="slate.css" type="text/css" rel="stylesheet">
-        <link href="punstyle.css" type="text/css" rel="stylesheet">
-        <link href="animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="title animated fadeInDown">WELCOME TO THE</h1>
