--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,6 @@
             
             <p class="center_description animated fadeInUp">Fan of wordplay? Who isn't!</p>
             <p class="center_description animated fadeInUp">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
-            <a href="index.html" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
+            <a href="../" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
         </center>
     </body>
