--- a/templates/aboutegg.html
+++ b/templates/aboutegg.html
@@ -12,6 +12,6 @@
             
             <p class="center_description animated fadeInUp egglets">Like eggs? Like corn? Well...this has nothing to do with either of those things, so sorry.</p>
             <p class="center_description animated fadeInUp egglets">Eggcorns are words or phrases that result from mishearing or misinterpreting other words and phrases. This includes things like substitution of one element for one that sounds very similar.</p>
-            <a href="eastereggcorn.html" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
+            <a href="eastereggcorn" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
         </center>
     </body>
