--- a/templates/eastereggcorn.html
+++ b/templates/eastereggcorn.html
@@ -15,7 +15,7 @@
                     </div>
                     <input type="submit" value="Egg me!" class="btn btn-default" >
                 </form>
-                <a href="aboutegg.html" class="center animated fadeIn longdelay" id="about">Egg?</a>
+                <a href="aboutegg" class="center animated fadeIn longdelay" id="about">Egg?</a>
             </form>
         </center>
     </body>
