--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <input type="submit" value="Punch me!" class="btn btn-default" >
             </form>
-            <a href="about.html" class="center animated fadeIn longdelay" id="about" >About Punderdome</a>
+			<a href="about" class="center animated fadeIn longdelay" id="about" >About Punderdome</a>
         </center>
         
     </body>
