--- a/templates/aboutegg.html
+++ b/templates/aboutegg.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../static/slate.css" type="text/css" rel="stylesheet">
-        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
-        <link href="../static/animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body background="eggs.jpg">
         <h1 class="subtitle egglets animated fadeInDown">About Eggcorns</h1>
