--- a/templates/eastereggcorn.html
+++ b/templates/eastereggcorn.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../static/slate.css" type="text/css" rel="stylesheet">
-        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
-        <link href="../static/animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/animate.css" type="text/css" rel="stylesheet">
     </head>
-    <body background="../static/eggs.jpg">
+    <body background="../static/img/eggs.jpg">
         <h1 class="egg animated tada">YOU'VE FOUND THE EASTER EGGCORN</h1>
         <center>
             <form method="post" class="center animated fadeInUp delay" role="search">
