--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../static/slate.css" type="text/css" rel="stylesheet">
-        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
-        <link href="../static/animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="subtitle animated fadeInDown">About the Punderdome</h1>
         <center>
-            <!-- insert info here-->
-            
             <p class="center_description animated fadeInUp">Fan of wordplay? Who isn't!</p>
             <p class="center_description animated fadeInUp">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
             <a href="../" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
