--- a/templates/outpun.html
+++ b/templates/outpun.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../static/slate.css" type="text/css" rel="stylesheet">
-        <link href="../static/punstyle.css" type="text/css" rel="stylesheet">
-        <link href="../static/animate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/slate.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/punstyle.css" type="text/css" rel="stylesheet">
+        <link href="../static/css/animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="subtitle animated fadeInDown">Puntential puns:</h1>
