--- a/templates/aboutegg.html
+++ b/templates/aboutegg.html
@@ -5,13 +5,13 @@
         <link href="../static/css/punstyle.css" type="text/css" rel="stylesheet">
         <link href="../static/css/animate.css" type="text/css" rel="stylesheet">
     </head>
-    <body background="eggs.jpg">
+    <body background="../static/img/eggs.jpg">
         <h1 class="subtitle egglets animated fadeInDown">About Eggcorns</h1>
         <center>
             <!-- insert info here-->
             
-            <p class="center_description animated fadeInUp egglets">Like eggs? Like corn? Well...this has nothing to do with either of those things, so sorry.</p>
-            <p class="center_description animated fadeInUp egglets">Eggcorns are words or phrases that result from mishearing or misinterpreting other words and phrases. This includes things like substitution of one element for one that sounds very similar.</p>
-            <a href="eastereggcorn" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
+            <h3 class="center_description animated fadeInUp egglets">Like eggs? Like corn? Well...this has nothing to do with either of those things, so sorry.</h3>
+            <h4 class="center_description animated fadeInUp egglets">Eggcorns are words or phrases that result from mishearing or misinterpreting other words and phrases. This includes things like substitution of one element for one that sounds very similar.</h4>
+            <a href="eastereggcorn" type = "submit" class="btn btn-success animated fadeIn delay">Take me back!</a>
         </center>
     </body>
