--- a/templates/aboutegg.html
+++ b/templates/aboutegg.html
@@ -12,6 +12,6 @@
             
             <h3 class="center_description animated fadeInUp egglets">Like eggs? Like corn? Well...this has nothing to do with either of those things, so sorry.</h3>
             <h4 class="center_description animated fadeInUp egglets">Eggcorns are words or phrases that result from mishearing or misinterpreting other words and phrases. This includes things like substitution of one element for one that sounds very similar.</h4>
-            <a href="eastereggcorn" type = "submit" class="btn btn-success animated fadeIn delay">Take me back!</a>
+            <a href="egg" type = "submit" class="btn btn-success animated fadeIn delay">Take me back!</a>
         </center>
     </body>
