--- a/templates/index.html
+++ b/templates/index.html
@@ -12,16 +12,19 @@
             <form method="post" class="center animated fadeInUp delay" role="search">
                 <input type="submit" value="ENTER THE PUNDERDOME" class="btn btn-default btn-lg" id="auto_gen" name="auto_gen">
             </form>
-            <div id="container" class="generated_pun">
+
+            <div id="container" class="generated_pun" name="generated_pun">
                 <!--auto generated random pun here-->
+				{{genpun}}
             </div>
+
             <h1 class="longdelay animated fadeIn">OR</h1>
+
             <form method="post" class="center animated fadeInUp longdelay" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me">
-                </div>
-                <input type="submit" value="Punch me!" class="btn btn-default" >
+                <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me" style="margin-bottom:16px">
+				<input type="submit" value="Punch me!" class="btn btn-default" >
             </form>
+
 			<a href="about" class="center animated fadeIn longdelay longerdelay" id="about" >About Punderdome</a>
         </center>
         
