--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <input type="submit" value="ENTER THE PUNDERDOME" class="btn btn-default btn-lg" id="auto_gen" name="auto_gen">
             </form>
 
-            <div id="container" class="generated_pun" name="generated_pun">
+            <div id="container" class="generated_pun animated fadeInUp delay" name="generated_pun">
                 <!--auto generated random pun here-->
 				{{genpun}}
             </div>
