--- a/templates/egg.html
+++ b/templates/egg.html
@@ -13,9 +13,10 @@
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Egg me!" id="egg_me" name="egg_me">
                     </div>
-                    <input type="submit" value="Egg me!" class="btn btn-default" >
+                    <input type="submit" value="Egg me!" class="btn btn-success" >
                 </form>
-                <a href="aboutegg" class="center animated fadeIn longdelay" id="about">Egg?</a>
+                <a href="aboutegg" class="center animated fadeIn longdelay" id="about"><h4>Egg?</h4></a>
+                <a href="index" class="center animated fadeIn longdelay" id="about">Take me back to the Punderdome!</a>
             </form>
         </center>
     </body>
