--- a/static/css/punstyle.css
+++ b/static/css/punstyle.css
@@ -65,6 +65,7 @@
     height:130px;
     font-size:85px;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 #easter{
@@ -72,10 +73,5 @@
 }
 
 #auto_gen{
-    margin-bottom: 30px;
-}
-.eggcorn{
-    height: 130px; 
-    font-size:85px;
     margin-bottom: 30px;
 }
