--- a/templates/egg.html
+++ b/templates/egg.html
@@ -9,14 +9,14 @@
         <h1 class="egg animated tada">YOU'VE FOUND THE EASTER EGGCORN</h1>
         <center>
             <form method="post" class="center animated fadeInUp delay" role="search">
-                <form method="post" class="center" role="search">
+                <form method="post" role="search">
                     <div class="form-group">
                         <input type="submit" value="EGG ME!" class="btn btn-success btn-lg" id="auto_gen" name="auto_gen">
                     </div>
-                    <div class="eggcorn">
-                        
-                    </div>
                 </form>
+                 <div id="container" class="generated_pun animated fadeInUp delay easter" name="generated_pun" style="color:azure">
+				    AT MUTE POINT
+                </div>
                 <a href="aboutegg" class="center animated fadeIn longdelay" id="about"><h4>Egg?</h4></a>
                 <a href="index" class="center animated fadeIn longdelay" id="about">Take me back to the Punderdome!</a>
             </form>
