--- a/templates/index.html
+++ b/templates/index.html
@@ -10,20 +10,19 @@
         <h1 class="title space animated fadeInUp">PUNDERDOME</h1>
         <center>
             <form method="post" class="center animated fadeInUp delay" role="search">
-                <input type="submit" value="ENTER THE PUNDERDOME" class="btn btn-default btn-lg" id="auto_gen" name="auto_gen">
-            </form>
 
             <div id="container" class="generated_pun animated fadeInUp delay" name="generated_pun">
                 <!--auto generated random pun here-->
 				{{genpun}}
             </div>
-
-            <h1 class="longdelay animated fadeIn">OR</h1>
+                <input type="submit" value="ENTER THE PUNDERDOME" class="btn btn-default btn-lg" id="auto_gen" name="auto_gen">
+            </form>
+        <!--    <h1 class="longdelay animated fadeIn">OR</h1>
 
             <form method="post" class="center animated fadeInUp longdelay" role="search">
                 <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me" style="margin-bottom:16px">
 				<input type="submit" value="Punch me!" class="btn btn-default" >
-            </form>
+            </form> -->
 
 			<a href="about" class="center animated fadeIn longdelay longerdelay" id="about" >About Punderdome</a>
         </center>
