--- a/templates/about.html
+++ b/templates/about.html
@@ -9,11 +9,10 @@
         <h1 class="subtitle animated fadeInDown space">About the Punderdome</h1>
         <center>
             <h3 class="center_description animated fadeInUp">Fan of wordplay? Who isn't!</h3>
-<<<<<<< HEAD
-            <h4 class="center_description animated fadeInUp">Enter the Punderdome to automatically be given a pun to whip out, use on your friends, and get some mad cool points. Or, enter a word of your choice and we'll suggest options to statisfy all of your specific pun needs. Pizza, <a href="egg" id="egg">egg</a>, jetpack - you name it, we'll find something for you.</h4>
-=======
-            <h4 class="center_description animated fadeInUp">Enter the Punderdome to automatically be given a phrase to whip out, use on your friends, and get some mad cool points. Or, enter a word of your choice and we'll suggest options to statisfy all of your specific pun needs. Pizza, <a href="eastereggcorn.html" id="easter">egg</a>, jetpack - you name it, we'll find something for you.</h4>
->>>>>>> bb86aafc5d0732d4e0594f3ed56e8fa183623f60
+
+            <h4 class="center_description animated fadeInUp">Enter the Punderdome to automatically be given a pun to whip out, use on your friends, and get some mad <a href="egg" id="egg">cool</a> points.</h4>
+            <p class="center_description animated fadeInUp">Used eggcorns.net and phrases.net.uk</p>
+
             <a href="../" type = "submit" class="btn btn-default animated fadeIn delay">Take me back!</a>
         </center>
     </body>
